@startuml
skinparam classAttributeIconSize 0
' left to right direction
caption Diagrama de entidades
namespace entidades {
    class Cliente {
        - String nome
        - String endereco
        + Cliente(nome:String)
        + getNome():String
        + setNome(nome:String):void
        + getEndereco():String
        + setEndereco(endereco:String ):void
        + getCidade():Cidade
        + setCidade(cidade:Cidade):void
        + toString():String
    }
    class Cidade {
        - String nome
        + Cidade(nome:String)
    }

    class Pokemon {
        - String nome
        + Pokemon(nome:String)
        + toString():String
    }
}
namespace telinha {
    class MinhaTelinha {

    }
    
}
namespace controlador {
    class ControladorTelinha {
    }
    
}
    MinhaTelinha --|> javax.swing.JFrame
    MinhaTelinha --> controlador.ControladorTelinha
    ControladorTelinha ..|> java.awt.event.ActionListener
    Cliente "-cidade *" -> "1" Cidade
    Cliente "-listaPokemon 1" -> "*" Pokemon
@enduml
